2013-06-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-search-collection): Fix docstring.
	(auth-source-netrc-parse): Refactor and improve netrc parser to support
	single-quoted strings and multiline entries.
	(auth-source-netrc-parse-next-interesting)
	(auth-source-netrc-parse-one, auth-source-netrc-parse-entries): New
	functions to support parser.

2013-06-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-submit): Get submit button logic right when hitting RET
	on non-submit buttons.

	* shr.el: Remove shr-preliminary-table-render, since that can't really
	be used for anything in practice.

2013-06-13  Albert Krewinkel  <tarleb@moltkeplatz.de>

	* sieve.el: Rebind q to (sieve-bury-buffer), bind Q to
	(sieve-manage-quit).

2013-06-14  Glenn Morris  <rgm@gnu.org>

	* mml2015.el (mml2015-maximum-key-image-dimension): Add :version.

2013-06-14  David Edmondson  <dme@dme.org>  (tiny change)

	* mml2015.el (mml2015-maximum-key-image-dimension): New user option to
	control the maximum size of photo ID image.
	(mml2015-epg-key-image-to-string): Respect it.

2013-06-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-table-1): Mark the preliminary table renderings
	instead of the final one so that we can more easily distinguish them.

	* eww.el (eww-submit): Compute the submission URL correctly.

2013-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sieve-manage.el (sieve-manage-open-server): Don't quote lambda.
	Use plist-get rather than CL's getf.
	(sieve-manage-parse-capability): Avoid CL's remove-if.

2013-06-13  Albert Krewinkel  <tarleb@moltkeplatz.de>

	* sieve.el: Rebind q to (sieve-bury-buffer), bind Q to
	(sieve-manage-quit).

2013-06-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-url): Expansion should chop off the bits after the
	last slash.

	* eww.el (eww-tag-select): Use the first value as the default value.

2013-06-13  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
